# ml-labs

./: .gitignore  .prettierrc  404.html  README.md  docusaurus.config.ts  index.html  opensearch.xml  package.json  pnpm-lock.yaml  pyproject.toml  search.html  sitemap.xml
assets/css/: styles.3a9c5eba.css  styles.4bcd8010.css  styles.8840a803.css  styles.dbf1f02d.css
assets/js/: 0057f9e0.01395550.js  03855303.d98aa6dc.js  0427b385.1317ac56.js  080854a5.2d28d8e9.js  080854a5.8b9650d9.js  0d11af8a.f16af691.js  0dc20807.4eb38d9c.js  0dc20807.65b9e4a2.js  0dc20807.74bd6461.js  0dc20807.dc3b66ce.js  0e72855c.091ddba0.js  0e72855c.25d0830f.js  0e72855c.4596190f.js  0e72855c.d6ed3a15.js  14eb3368.ba7253c3.js  14eb3368.c8a15228.js  14eb3368.da7540de.js  1535.a4e57a91.js  15bdd8dc.1788bb74.js  15bdd8dc.28dd4ab7.js  15bdd8dc.49aa0ab5.js  15bdd8dc.4a6c2a2a.js  15bdd8dc.6665663e.js  15bdd8dc.aa5e4c4f.js  15bdd8dc.bdc800ae.js  1745.0aee3f7e.js  1785.83687c8f.js  1785.d74848f4.js  17896441.07c677f7.js  17896441.a7f0423f.js  17896441.f10f0561.js  1874.c9774840.js  1874.efe1e5f8.js  1a4e3797.18b2e2a2.js  1a4e3797.9a800e51.js  1ae8c1dd.0cb981c6.js  1ae8c1dd.14c7792e.js  1ae8c1dd.d1196c9f.js  1ae8c1dd.e471ec70.js  1c83fab4.30849d2f.js  (+249 more)
docs/category/: agi-engineering.html  agi.html  ai-engineering.html  data-analysis.html  data-engineering.html  data-science.html  database.html  machine-learning.html  mathematics.html  mlops.html  python.html  roles.html
ml/: pyproject.toml
ml/00-roles/: 01-overview.ipynb
ml/02-libs/: 01-overview.ipynb
ml/02-python/: 01-basics.ipynb  (+5 more)
(+139 files in other folders)
