[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-labs"
version = "0.1.0"
description = "Machine Learning Labs"
authors = [ {name = "RA"} ]
dependencies = [
    "numpy==2.3.3",
    "pandas==2.3.3",
    "matplotlib==3.10.6",
    "scikit-learn==1.7.2"
]

[tool.setuptools]
packages = []
